facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_value_array_of_objects_vs_vec_of_structs_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before────────────────╮
│[                     │
│  {                   │
│    name: "Alice",    │
│    age: 30,          │
│  },                  │
│  {                   │
│    name: "Bob",      │
│    age: 25,          │
│  },                  │
│]                     │
╰──────────────────────╯
╭After─────────────────╮
│Vec<OwnedUser> [      │
│  OwnedUser {         │
│    name: "Alice",    │
│    age: 31,          │
│  },                  │
│  OwnedUser {         │
│    name: "Charlie",  │
│    age: 35,          │
│  },                  │
│]                     │
╰──────────────────────╯
╔Diff══════════════════╗
║[                     ║
║    - {               ║
║      name: "Alice",  ║
║      age: 30,        ║
║    }                 ║
║    - {               ║
║      name: "Bob",    ║
║      age: 25,        ║
║    }                 ║
║    + OwnedUser {     ║
║      name: "Alice",  ║
║      age: 31,        ║
║    }                 ║
║    + OwnedUser {     ║
║      name: "Charlie",║
║      age: 35,        ║
║    }                 ║
║]                     ║
╚══════════════════════╝
