facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_value_array_vs_native_array_different_length.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────────╮
│[                       │
│  1,                    │
│  2,                    │
│  3,                    │
│  4,                    │
│  5,                    │
│]                       │
╰────────────────────────╯
╭After───────────────────╮
│[i64; 3] [1, 2, 3]      │
╰────────────────────────╯
╔Diff════════════════════╗
║[                       ║
║    .. 3 unchanged items║
║    - 4                 ║
║    - 5                 ║
║]                       ║
╚════════════════════════╝
