facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_value_array_vs_native_array_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
assertion_line: 1346
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────╮
│[                   │
│  1,                │
│  2,                │
│  3,                │
│]                   │
╰────────────────────╯
╭After───────────────╮
│[i64; 3] [1, 2, 3]  │
╰────────────────────╯
╔Diff════════════════╗
║(structurally equal)║
╚════════════════════╝
