facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_value_array_vs_vec.snap
---
source: facet-diff/tests/diff_snapshots.rs
assertion_line: 810
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────╮
│[                   │
│  1,                │
│  2,                │
│  3,                │
│]                   │
╰────────────────────╯
╭After───────────────╮
│Vec<i64> [1, 2, 3]  │
╰────────────────────╯
╔Diff════════════════╗
║(structurally equal)║
╚════════════════════╝
