facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_value_array_vs_vec_element_change.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before───────────────────╮
│[                        │
│  1,                     │
│  2,                     │
│  3,                     │
│  4,                     │
│  5,                     │
│]                        │
╰─────────────────────────╯
╭After────────────────────╮
│Vec<i64> [1, 2, 30, 4, 5]│
╰─────────────────────────╯
╔Diff═════════════════════╗
║[                        ║
║    .. 2 unchanged items ║
║    3 → 30               ║
║    .. 2 unchanged items ║
║]                        ║
╚═════════════════════════╝
