facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_value_deeply_nested_object.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────────────────────────╮
│{                                       │
│  level1: {                             │
│    level2: {                           │
│      level3: {                         │
│        level4: {                       │
│          value: 42,                    │
│          name: "deep",                 │
│        },                              │
│      },                                │
│    },                                  │
│  },                                    │
│}                                       │
╰────────────────────────────────────────╯
╭After───────────────────────────────────╮
│{                                       │
│  level1: {                             │
│    level2: {                           │
│      level3: {                         │
│        level4: {                       │
│          value: 100,                   │
│          name: "deep",                 │
│        },                              │
│      },                                │
│    },                                  │
│  },                                    │
│}                                       │
╰────────────────────────────────────────╯
╔Diff════════════════════════════════════╗
║{                                       ║
║    level1: {                           ║
║        level2: {                       ║
║            level3: {                   ║
║                level4: {               ║
║                    .. 1 unchanged field║
║                    value: 42 → 100     ║
║                }                       ║
║            }                           ║
║        }                               ║
║    }                                   ║
║}                                       ║
╚════════════════════════════════════════╝
