facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_value_mixed_array_vs_tuple.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before───────────────────╮
│[                        │
│  1,                     │
│  "hello",               │
│  true,                  │
│]                        │
╰─────────────────────────╯
╭After────────────────────╮
│(i64, &str, bool) (      │
│  1,                     │
│  "hello",               │
│  true,                  │
│)                        │
╰─────────────────────────╯
╔Diff═════════════════════╗
║[                        ║
║  1,                     ║
║  "hello",               ║
║  true,                  ║
║] → (i64, &str, bool) (  ║
║  1,                     ║
║  "hello",               ║
║  true,                  ║
║)                        ║
╚═════════════════════════╝
