facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_value_nested_object.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before────────────────────────────────────────╮
│{                                             │
│  user: {                                     │
│    name: "Alice",                            │
│    address: {                                │
│      city: "Wonderland",                     │
│    },                                        │
│  },                                          │
│}                                             │
╰──────────────────────────────────────────────╯
╭After─────────────────────────────────────────╮
│{                                             │
│  user: {                                     │
│    name: "Alice",                            │
│    address: {                                │
│      city: "Elsewhere",                      │
│    },                                        │
│  },                                          │
│}                                             │
╰──────────────────────────────────────────────╯
╔Diff══════════════════════════════════════════╗
║{                                             ║
║    user: {                                   ║
║        .. 1 unchanged field                  ║
║        address: {                            ║
║            city: "Wonderland" → "Elsewhere"  ║
║        }                                     ║
║    }                                         ║
║}                                             ║
╚══════════════════════════════════════════════╝
