facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_value_nested_vs_nested_struct_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before─────────────────────────────────────────╮
│{                                              │
│  name: "Alice",                               │
│  age: 30,                                     │
│  address: {                                   │
│    street: "123 Main St",                     │
│    city: "Wonderland",                        │
│  },                                           │
│}                                              │
╰───────────────────────────────────────────────╯
╭After──────────────────────────────────────────╮
│UserWithAddress {                              │
│  name: "Alice",                               │
│  age: 31,                                     │
│  address: Address {                           │
│    street: "456 Oak Ave",                     │
│    city: "Wonderland",                        │
│  },                                           │
│}                                              │
╰───────────────────────────────────────────────╯
╔Diff═══════════════════════════════════════════╗
║{                                              ║
║    .. 1 unchanged field                       ║
║    address: {                                 ║
║        .. 1 unchanged field                   ║
║        street: "123 Main St" → "456 Oak Ave"  ║
║    }                                          ║
║    age: 30 → 31                               ║
║}                                              ║
╚═══════════════════════════════════════════════╝
